# vroom

./: .Rbuildignore  .Rhistory  .covrignore  .gitignore  .lcovrc  .travis.yml  404.html  CLAUDE.html  CLAUDE.md  CMakeLists.txt  CNAME  CODE_OF_CONDUCT.html  DESCRIPTION  Dockerfile  LICENSE  LICENSE-text.html  LICENSE-text.md  LICENSE.html  LICENSE.md  MAINTENANCE.html  MAINTENANCE.md  Makefile  NAMESPACE  NEWS.md  PRODUCTION_READINESS_PLAN.md  README.Rmd  README.md  _pkgdown.yml  authors.html  authors.md  azure-pipelines.yml  codecov.yml  cran-comments.md  fwf_time.Rds  index.html  index.md  llms.txt  pkgdown.yml  search.json  sitemap.xml  (+1 more)
python/: CMakeLists.txt  README.md
python/benchmarks/: benchmark_csv.py
python/examples/: README.md  getting_started.ipynb
python/src/: bindings.cpp
python/src/vroom_csv/: __init__.py  _core.pyi
python/tests/: test_arrow.py  test_batched.py  test_stub_api.py
src/libvroom/: .clang-format  .gitignore  .work.toml  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  baseline_benchmarks.txt  codecov.yml  tsan_suppressions.txt
src/libvroom/.github/workflows/: README.md  benchmark.yml  benchmarks.yml  python-wheels.yml
src/libvroom/bench/scripts/: run_benchmarks.sh
src/libvroom/benchmark/: arrow_convert_benchmarks.cpp  basic_benchmarks.cpp  check_regression.py  comparison_benchmarks.cpp  dimensions_benchmarks.cpp  end_to_end_benchmarks.cpp  energy_benchmarks.cpp  error_collection_benchmark.cpp  escape_tracking_benchmarks.cpp  external_parser_benchmarks.cpp  hypothesis_benchmarks.cpp  number_parsing_benchmarks.cpp  parser_overhead_benchmarks.cpp  performance_metrics.cpp  real_world_benchmarks.cpp  row_reconstruction_benchmarks.cpp  simd_benchmarks.cpp  table_benchmarks.cpp  transpose_benchmarks.cpp
src/libvroom/cmake/: ArrowIntegration.cmake
src/libvroom/docs/: DoxygenLayout.xml  _quarto.yml  build.sh  caching.qmd  error_handling.md  getting-started.qmd  literature_review.md  mainpage.md  python.qmd  recent_simd_research_2020_2026.md
src/libvroom/docs/plans/: 2026-01-18-migration-phase2-build.md  2026-01-18-migration-phase4-cli.md  2026-02-04-streaming-csvreader-api.md
src/libvroom/fuzz/: README.md  fuzz_csv_parser.cpp  fuzz_dialect_detection.cpp  fuzz_parse_auto.cpp
src/libvroom/include/: arrow_output.h  branchless_state_machine.h  debug.h  debug_parser.h  dialect.h  encoding.h  error.h  extraction_config.h  io_util.h  libvroom.h  libvroom_c.h  libvroom_types.h  mem_util.h  mmap_util.h  simd_dispatch.h  simd_highway.h  simd_number_parsing.h  streaming.h  two_pass.h  type_detector.h  utf8.h  value_extraction.h
src/libvroom/include/libvroom/: arrow_buffer.h  arrow_c_data.h  arrow_column_builder.h  arrow_export.h  common_defs.h  convert.h  data_chunk.h  dialect.h  dictionary.h  encoding.h  error.h  fast_arrow_context.h  fast_column_context.h  format_locale.h  format_parser.h  io_util.h  options.h  parse_utils.h  parsed_chunk_queue.h  quote_parity.h  simd_atoi.h  split_fields.h  statistics.h  streaming.h  types.h  vroom.h
src/libvroom/oss-fuzz/: Dockerfile  build.sh
src/libvroom/python/: CMakeLists.txt  README.md  pyproject.toml
src/libvroom/python/benchmarks/: README.md  benchmark_arrow_export.py  benchmark_numeric_parsing.py  profile_arrow_export.py
src/libvroom/python/examples/: arrow_interop.ipynb  csv_to_columnar.ipynb
src/libvroom/python/src/: bindings.cpp
src/libvroom/python/src/vroom_csv/: __init__.py  _core.pyi
src/libvroom/python/tests/: __init__.py  conftest.py  test_arrow.py  test_basic.py  test_batched.py  test_full_api.py  test_streaming.py  test_stub_api.py
src/libvroom/scripts/: generate_test_data.py  pre-commit  work
src/libvroom/src/: arrow_output.cpp  branchless_state_machine.cpp  cli.cpp  convert.cpp  dialect.cpp  encoding.cpp  error.cpp  io_util.cpp  libvroom_c.cpp  libvroom_types.cpp  mmap_util.cpp  simd_number_parsing.cpp  streaming.cpp  table.cpp  two_pass.cpp  utf8.cpp  value_extraction.cpp
src/libvroom/src/columns/: column_builder.cpp  cow_buffer.h
src/libvroom/src/encoding/: delta_bitpacked.cpp  delta_length.cpp  hybrid_rle.cpp  plain.cpp  rle.cpp
src/libvroom/src/parser/: chunk_finder.cpp  line_parser.cpp  quote_parity-inl.h  quote_parity.cpp  simd_atoi-inl.h  simd_atoi.cpp  simd_chunk_finder.cpp  split_fields-inl.h  split_fields.cpp  split_fields_iter-inl.h  split_fields_iter.cpp
src/libvroom/src/reader/: csv_reader.cpp  fwf_reader.cpp  mmap_source.cpp  streaming_parser.cpp
src/libvroom/src/schema/: format_locale.cpp  format_parser.cpp  type_inference.cpp  type_parsers.cpp
src/libvroom/src/simd/: statistics_simd.cpp
src/libvroom/src/writer/: arrow_ipc_writer.cpp  column_writer.cpp  compression.cpp  dictionary.cpp  encoded_row_group.h  encoded_row_group_queue.h  page_writer.cpp  parquet_file.cpp  parquet_types.cpp  parquet_types.h  row_group.cpp  statistics.cpp  thrift_compact.cpp  thrift_compact.h
src/libvroom/test/: arrow_conversion_test.cpp  branchless_test.cpp  cli_test.cpp  comment_line_test.cpp  concurrency_test.cpp  csv_errors_test.cpp  csv_extended_test.cpp  csv_parser_test.cpp  elias_fano_test.cpp  encoding_test.cpp  error_handling_test.cpp  index_cache_test.cpp  integration_test.cpp  mmap_util_test.cpp  parsed_chunk_queue_test.cpp  quote_mask_test.cpp  row_filter_test.cpp  simd_parsing_test.cpp  size_limits_test.cpp  streaming_test.cpp  table_test.cpp  test_helpers.h  test_util.h  type_detection_test.cpp  type_inference_test.cpp  value_extraction_test.cpp  vroom_api_test.cpp
src/libvroom/test/data/basic/: many_rows.csv  narrow_columns.csv  simple.csv  single_column.csv  tiny.csv  wide_columns.csv
src/libvroom/test/data/comments/: hash_comments.csv  multi_header_comments.csv  semicolon_comments.csv
src/libvroom/test/data/edge_cases/: long_fields.csv  utf8_truncation.csv  whitespace_fields.csv
src/libvroom/test/data/encoding/: latin1.csv  utf16_be_bom.csv  utf16_be_no_bom.csv  utf16_bom.csv  utf16_le_bom.csv  utf16_le_no_bom.csv  utf32_be_bom.csv  utf8_bom.csv
src/libvroom/test/data/fuzz/: quote_delimiter_alt.csv  quote_eof.csv  scattered_nulls.csv
(+730 files in other folders)
